<resources>
    <string name="app_name">KS Transfer</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="forgot_password"> forgot password ? </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="my_task">My Tasks</string>
    <string name="my_profile">My Profile</string>
    <string name="logout">Logout</string>
    <string name="upcoming">Upcoming</string>
    <string name="today">Today</string>
    <string name="yes">YES</string>
    <string name="no">NO </string>
    <string name="ok">OK</string>
    <string name="are_you_sure">Are you sure you want \n to send an e-mail to \n  department@domain.com \n to inform that there is a \n  problem with this task?</string>
    <string name="are_you_sure_want_to_complete_task">Are you sure you want to \n complete this task? </string>
    <string name="are_you_sure_log_out">Are you sure want \n to logout from app? </string>
    <string name="please_enter_user_name">Please enter user name.</string>
    <string name="please_enter_password">Please enter password.</string>
    <string name="please_enter_first_name">Please enter first name.</string>
    <string name="please_enter_last_name">Please enter last name.</string>
    <string name="please_enter_contact">Please enter contact.</string>
    <string name="please_enter_department">Please enter department.</string>
    <string name="email_id">Email Id</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDBR9T1iQc45n9HjiEpIs2mhpQRzeZQA-A</string>
    <string name="enter_drop_line">Enter Drop of location</string>
    <string name="enter_pickup_point">Enter Pickup location</string>
    <string name="google_directions_key">AIzaSyCGs52wU9ak85xLXGDyKFBUTgsq14wuiNA</string>
    <string name="book_diriver">Book Diriver</string>
    <string name="booking_history">Booking History</string>
    <string name="support">Support</string>
    <string name="term_and_condition">Term And Condition</string>
    <string name="register_your_car">Register Your car</string>
    <string name="register_your_driver">Register Your Driver</string>


    <string name="phone_code" translatable="false">+%s</string>
    <string name="country_name_and_code" translatable="false">%1$s (%2$s)</string>
    <string name="search_hint">Search&#8230;</string>
    <string name="no_result_found">No result found</string>
    <string name="select_country">Select Country</string>
    <string name="country_code_and_phone_code">(%1$s) +%2$s</string>
    <string name="country_full_name_and_phone_code">%1$s +%2$s</string>
    <string name="error_unregister_carrier_number">EditText for carrier number is not registered. Register it using registerPhoneNumberTextView() before getFullNumber() or setFullNumber().</string>
    <string name="plase_enter_your_mobile_number_to_proced">Plase enter your mobile \n number to proced</string>
    <string name="your_mobile">Your Mobile</string>
    <string name="full_name">Full Name</string>
    <string name="leave_on">Leave On</string>
    <string name="return_by">Return By</string>
    <string name="hide_fare_details">Hide Fare Details</string>
    <string name="enter_your_mobile_no">Enter Your mobile no</string>
    <string name="enter_your_emai_id">Enter Your Emai id</string>
    <string name="enter_your_home_address">Enter Your Home Address</string>
    <string name="total_payment">Total Payment</string>
    <string name="confirm_booking">Confirm Booking</string>
    <string name="_45_min_away">45 min away</string>
    <string name="adavace_booking">Adavace\nbooking</string>
    <string name="on_way_trip">one way \n trip</string>
    <string name="round_trip">Round\nTrip</string>
    <string name="keep_car_till_return">Keep Car Till Return</string>
    <string name="night_time_allowance_n_taxes">Night time allowance \nTaxes</string>
    <string name="terms_and_condition">terms and condition</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>

    <string-array name="Qnty">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

</resources>
