<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_above="@+id/llBelow"
    android:layout_alignParentTop="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:id="@+id/view1"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_50sdp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/small_logo" />

        <View
            android:id="@+id/view2"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_50sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edtUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/bg_edit_text"
                android:drawableLeft="@drawable/user"
                android:drawablePadding="@dimen/_10sdp"
                android:fontFamily="@font/opensans_regular"
                android:gravity="center_vertical"
                android:hint="@string/user_name"
                android:inputType="text"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/gray_text_color"
                android:textColorHint="@color/gray_text_color"
                android:textSize="16sp" />


            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/bg_edit_text"
                android:drawableLeft="@drawable/email"
                android:drawablePadding="@dimen/_10sdp"
                android:fontFamily="@font/opensans_regular"
                android:gravity="center_vertical"
                android:hint="@string/email_id"
                android:inputType="textEmailAddress"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/gray_text_color"
                android:textColorHint="@color/gray_text_color"
                android:textSize="16sp" />


            <EditText
                android:id="@+id/edtMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/bg_edit_text"
                android:drawableLeft="@drawable/mobile"
                android:drawablePadding="@dimen/_10sdp"
                android:fontFamily="@font/opensans_regular"
                android:gravity="center_vertical"
                android:hint="@string/user_name"
                android:inputType="phone"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/gray_text_color"
                android:textColorHint="@color/gray_text_color"
                android:textSize="16sp" />


            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/bg_edit_text"
                android:drawableLeft="@drawable/password"
                android:drawablePadding="@dimen/_10sdp"
                android:fontFamily="@font/opensans_regular"
                android:gravity="center_vertical"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/gray_text_color"
                android:textColorHint="@color/gray_text_color"
                android:textSize="16sp" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp">

                <TextView
                    android:id="@+id/txtLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_yello_button"
                    android:fontFamily="@font/opensans_regular"
                    android:paddingBottom="@dimen/_10sdp"
                    android:paddingLeft="@dimen/_30sdp"
                    android:paddingRight="@dimen/_30sdp"
                    android:paddingTop="@dimen/_10sdp"
                    android:text="Login"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </RelativeLayout>
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_20sdp"/>


        <LinearLayout
            android:id="@+id/llBelow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:text="Not a member?"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:text="Sign up now."
                android:textColor="@color/colorPrimary" />


        </LinearLayout>


    </LinearLayout>
</ScrollView>


